# python-project-52

./: .env  Makefile  README.md  build.sh  main.py  pyproject.toml
task_manager/: forms.py  middleware.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: labels.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses_fixture.json
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: tasks.json
task_manager/tasks/migrations/: 0001_initial.py  0002_task_description.py  0003_alter_task_description.py  0004_alter_task_executor.py  0005_task_labels.py
task_manager/templates/: index.html  layout.html  login.html
task_manager/templates/labels/: delete.html  form.html  index.html
task_manager/templates/statuses/: delete.html  form.html  index.html
task_manager/templates/tasks/: delete.html  detail.html  form.html  index.html
task_manager/templates/users/: delete.html  form.html  index.html
task_manager/users/: forms.py  tests.py  urls.py  views.py
task_manager/users/fixtures/: users.json
